--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <!-- Fonts to support Material Design -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -11,7 +10,13 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
     />
-    <title>Vite + Material UI + TS</title>
+    <style>
+      *{
+        font-family: 'Roboto', sans-serif;
+        margin: 0;
+      }
+    </style>
+    <title>Barbershop UI</title>
   </head>
   <body>
     <div id="root"></div>
